--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-     <title>MY Application Welcome You</title>
+     <title>Welcome to MY Application </title>
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
